<resources>
    <string name="app_name">My Manager</string>
    <string name="action_groups">Edit groups</string>
    <string name="action_new_project">Add a new project</string>
    <string name="action_new_task">Add a new task</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_new_task">New Task</string>
    <string name="title_activity_edit_task">Edit Task</string>
    <string name="title_activity_groups_editor">Edit Groups</string>
    <string name="task_name_hint">Enter task name</string>
    <string name="task_desc_hint">Enter a description for this task.</string>
    <string name="time_est_hint">Estimated length (hrs)</string>
    <string name="submit_button">Submit</string>
    <string name="add_button">Add</string>
    <string name="all_tasks_message">Current elements:</string>
    <string name="select_group_hint">Select a group...</string>
    <string name="project_name_hint">Enter project name</string>
    <string name="congrats">Congratulations!</string>
    <string name="congrats_text">For completing %1$s, you have been awarded %2$d points. %3$s\n</string>
    <string name="achievement_text">\nYou\'ve also completed the achievement: %1$s and have been awarded an additional %2$s points.\n</string>


    <string name="edit_ID">edit_ID</string>
    <string name="preference_file_key">Preferences</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_new_project">New Project</string>
    <string name="title_activity_edit_project">Edit Project</string>

    <string-array name="sort_options">
        <item>by due date</item>
        <item>by group</item>
        <item>by name</item>
        <item>by start date</item>
    </string-array>

    <string-array name="compliments">
        <item>Keep it up!</item>
        <item>Nice job!</item>
        <item>Well done!</item>
        <item>Great work!</item>
        <item>Way to go!</item>
        <item>What a star!</item>
    </string-array>
</resources>
